# tauri-codegen

./: Cargo.toml  README.md
src/: cargo_expand.rs  config.rs  known_types.rs  lib.rs  main.rs  pipeline.rs  resolver.rs  scanner.rs  utils.rs
src/generator/: commands_gen.rs  mod.rs  type_mapper.rs  types_gen.rs
src/models/: command.rs  mod.rs  parse_result.rs  rust_type.rs  types.rs
src/parser/: command_parser.rs  mod.rs  type_extractor.rs  type_parser.rs
tauri-ts-generator-derive/: Cargo.toml
tauri-ts-generator-derive/src/: lib.rs
tauri-ts-generator-derive/tests/: compile_tests.rs
tests/fixtures/: complex_types.rs  nested_modules.rs  simple_commands.rs
tests/fixtures/expected/: simple_commands.ts  simple_types.ts
tests/integration/: generator_tests.rs  mod.rs  parser_tests.rs  pipeline_tests.rs
