[package]
name = "tauri-ts-generator"
version = "1.4.0"
edition = "2021"
description = "CLI tool to generate TypeScript bindings from Tauri commands"
authors = ["kirillinakin <kirillinyakin@yandex.ru>"]
repository = "https://github.com/Dudude-bit/tauri-codegen"
license = "MIT"
readme = "README.md"
keywords = ["tauri", "typescript", "codegen", "bindings", "api"]
categories = ["development-tools", "command-line-utilities", "web-programming"]
exclude = [
    "test-project",
    "tests",
    "mise.toml",
    ".gitignore",
    ".github",
    ".idea"
]

[lib]
name = "tauri_ts_generator"
path = "src/lib.rs"

[[bin]]
name = "tauri-ts-generator"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dependencies]
# Rust AST parsing
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"

# Directory traversal
walkdir = "2.4"

# Error handling
anyhow = "1.0"

# For converting case (snake_case to camelCase)
convert_case = "0.10.0"

[dev-dependencies]
tempfile = "3.24.0"
